[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claude_light"
authors = [{name = "John Kitchin", email = "jkitchin@andrew.cmu.edu"}]
dependencies = [
	     "retry",
	     "requests",
	     "mcp[cli]"]
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
cl_mcp = "claude_light.mcp:main"